--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "react": "^16.8.6",
     "redux": "^4.0.4",
-    "unstated": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -35,14 +34,13 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools": "^3.5.0",
-    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2"
+    "eslint-plugin-react": "^7.14.2",
+    "redux-devtools": "^3.5.0"
   }
 }
